--- a/css/styles.css
+++ b/css/styles.css
@@ -692,7 +692,8 @@ body {
   transition: fill var(--timing) var(--transition-function);
 }
 
-.close-button:focus .close-button:hover {
+.close-button:focus,
+.close-button:hover {
   fill: var(--accent-color);
 }
 
